--- a/templates/result_blast_uhgp.html
+++ b/templates/result_blast_uhgp.html
@@ -20,7 +20,8 @@
 </div>
 <ul class="nav nav-tabs" id="myTab">
     <li class="active">
-        <a data-toggle="tab" href="#tab1">Blast</a></li>
+        <a data-toggle="tab" href="#tab1">Blast</a>
+    </li>
     {% if hmmrecord != 0 %}
     <li><a data-toggle="tab" href="#tab2">hmmscan</a></li>
     {% endif %}
@@ -45,43 +46,43 @@
         <br>
         <table class="table" id="data-table">
             <thead>
-            <tr>
-                <th style="white-space: nowrap">Query ID</th>
-                <th style="white-space: nowrap">Subject ID</th>
-                <th style="white-space: nowrap">Cluster ID</th>
-                <th style="white-space: nowrap">Family</th>
-                <th style="white-space: nowrap">Identity</th>
-                <th style="white-space: nowrap">E-value</th>
-                <th style="white-space: nowrap">Name</th>
-            </tr>
+                <tr>
+                    <th style="white-space: nowrap">Query ID</th>
+                    <th style="white-space: nowrap">Subject ID</th>
+                    <th style="white-space: nowrap">Cluster ID</th>
+                    <th style="white-space: nowrap">Family</th>
+                    <th style="white-space: nowrap">Identity</th>
+                    <th style="white-space: nowrap">E-value</th>
+                    <th style="white-space: nowrap">Name</th>
+                </tr>
             </thead>
             <tbody>
-            {% for record in records %}
-            <tr>
-                <td>{{ record[0] }}</td>
-                <td>{{ record[1] }}</td>
-                <td>
-                    {% if record[2] =="NA" %}
-                    &nbsp;
-                    {% else %}
-                    <a href="{{ url_for('cluster_detail', cluster_id = record[2]) }}"
-                       target="_blank">{{ record[2] }}</a>
-                    {% endif %}
-                </td>
-                <td>
-                    {% if "unclassified" in record[3]: %}
-                    <a href="{{ url_for('family', family_id = record[3].split('-', 1)[0]) }}">{{ record[3] }}</a>
-                    {% elif "_" in record[3]: %}
-                    <a href="{{ url_for('subfamily', family_id = record[3]) }}">{{ record[3] }}</a>
-                    {% else %}
-                    <a href="{{ url_for('family', family_id = record[3]) }}">{{ record[3] }}</a>
-                    {% endif %}
-                </td>
-                <td>{{ '%0.2f'| format(record[4]|float) }}</td>
-                <td>{{ '%0.2f'| format(record[5]|float) }}</td>
-                <td>{{ record[6] }}</td>
-            </tr>
-            {% endfor %}
+                {% for record in records %}
+                <tr>
+                    <td>{{ record[0] }}</td>
+                    <td>{{ record[1] }}</td>
+                    <td>
+                        {% if record[2] =="NA" %}
+                        &nbsp;
+                        {% else %}
+                        <a href="{{ url_for('cluster_detail', cluster_id = record[2]) }}" target="_blank">{{ record[2]
+                            }}</a>
+                        {% endif %}
+                    </td>
+                    <td>
+                        {% if "unclassified" in record[3]: %}
+                        <a href="{{ url_for('family', family_id = record[3].split('-', 1)[0]) }}">{{ record[3] }}</a>
+                        {% elif "_" in record[3]: %}
+                        <a href="{{ url_for('subfamily', family_id = record[3]) }}">{{ record[3] }}</a>
+                        {% else %}
+                        <a href="{{ url_for('family', family_id = record[3]) }}">{{ record[3] }}</a>
+                        {% endif %}
+                    </td>
+                    <td>{{ '%0.2f'| format(record[4]|float) }}</td>
+                    <td>{{ '%0.2f'| format(record[5]|float) }}</td>
+                    <td>{{ record[6] }}</td>
+                </tr>
+                {% endfor %}
 
             </tbody>
 
